--- a/appengine/app/Makefile
+++ b/appengine/app/Makefile
@@ -1,10 +1,10 @@
 setup:
-	go get github.com/Masterminds/glide
+	go get golang.org/x/vgo
 	go get github.com/golang/lint/golint
 	go get golang.org/x/tools/cmd/goimports
 
 deps: setup
-	cd ../.. && glide install
+	cd ../.. && vgo vendor
 
 deploy: deps
 	GOPATH=../_gopath:../_gopath/vendor gcloud app deploy
